src/styles/markdown.css
@reference './global.css';

article {
  /* 标题通用样式 */
  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    display: inline-block;
    width: 100%;
    margin: 1rem 0 0.5rem;
    font-weight: bold;
    position: relative;

    a {
      padding: 0 0.5rem;
      opacity: 0;
      text-decoration: none;
      color: var(--color-primary);
      transition: opacity 0.2s ease-in-out;
    }

    &:hover {
      a {
        opacity: 1;
      }
    }
  }

  /* 各级标题特殊样式 */
  h1 {
    @apply text-3xl;
  }

  h2 {
    @apply text-2xl;
  }

  h3 {
    @apply text-xl;
  }

  h4 {
    @apply text-lg;
  }

  h5,
  h6 {
    @apply text-base;
  }

  /* 基础文本元素 */
  p {
    margin: 0.75rem 0;
  }

  a:not(.card) {
    @apply text-primary underline decoration-dashed;
  }

  /* 媒体元素 */
  img {
    &:where(:not(inline img)) {
      max-width: 75%;
      max-height: 40rem;

      @apply relative mx-auto mt-4 mb-6 rounded-md;
    }

    &:where(inline img) {
      display: inline;
      max-height: 2em;
      vertical-align: middle;
      margin: 0 0.25em;
      object-fit: contain;
      width: auto;
      border-radius: 0.25rem;
    }
  }

  hr {
    margin: 1.5rem 0.25rem;
    border: 1px dashed;
  }

  /* 列表样式 */
  ul,
  ol {
    margin-top: 0.5rem;
  }

  ol {
    counter-reset: li;

    > li {
      position: relative;
      padding: 0.25rem 0.25rem 0.25rem 1.8em;

      &::before {
        position: absolute;
        left: 0;
        margin-top: 0.25em;
        width: 1.5em;
        height: 1.5em;
        content: counter(li);
        counter-increment: li 1;
        font-size: 0.75em;
        line-height: 1.5em;
        text-align: center;
        border-radius: 9999px;

        @apply bg-primary/50 text-primary;
      }

      p:first-child {
        margin-top: 0;
      }
    }
  }

  ul > li {
    position: relative;
    padding: 0.25rem 0.25rem 0.25rem 1.4em;

    &:not(:has(input[type='checkbox']))::before {
      position: absolute;
      top: 0.6em;
      left: 0.25em;
      width: 0.75em;
      height: 0.75em;
      content: '';
      border: 0.25em solid;
      border-radius: 9999px;

      @apply border-primary/75;
    }

    > input[type='checkbox'] {
      position: absolute;
      top: calc(0.25rem + 0.25em);
      left: 0;
      width: 0.85em;
      height: 0.85em;
      appearance: none;
      border: 0.125em solid;
      border-radius: 0.25em;
      transition: 300ms all ease;

      &:checked {
        @apply bg-primary/75;

        &::after {
          content: '✓';
          position: absolute;
          font-size: 0.75em;
          line-height: 0.75em;
          color: var(--colors-primary-content);
        }
      }
    }
  }

  /* 代码样式 */
  pre {
    padding: 1rem 2rem 1rem 0.5rem;
    counter-reset: line;
    transition: 300ms all ease;
    overflow-x: scroll;

    code {
      display: flex;
      flex-direction: column;
      gap: 0.125em;

      > span {
        position: relative;
        display: block;
        padding-left: 2em;
        min-height: 1.5em;

        &::before {
          position: absolute;
          left: 0;
          content: counter(line);
          counter-increment: line;
          font-size: 0.85em;
          width: 2em;
          text-align: right;
          padding-right: 0.25em;
          transform: translateY(0.15em);
        }
      }
    }
  }
  .astro-code {
    @apply relative rounded-md;

    > :last-child > span {
      @apply bg-base-content/60!;
    }
    /* 避免 Repl 组件中出现上下间隙 */
    &:where(:not(.card-body :only-child)) {
      @apply my-4;
    }
  }
  .astro-code,
  .astro-code span {
    &:where([data-theme='light'], [data-theme='light'] *) {
      color: var(--shiki-light);
      background-color: var(--shiki-light-bg);
      font-style: var(--shiki-light-font-style);
      font-weight: var(--shiki-light-font-weight);
      text-decoration: var(--shiki-light-text-decoration);
    }

    &:where([data-theme='dark'], [data-theme='dark'] *) {
      color: var(--shiki-dark);
      background-color: var(--shiki-dark-bg);
      font-style: var(--shiki-dark-font-style);
      font-weight: var(--shiki-dark-font-weight);
      text-decoration: var(--shiki-dark-text-decoration);
    }
  }

  code:not(pre code) {
    padding: 0 0.25rem;

    @apply bg-primary/10 text-primary rounded-md;
  }

  /* 引用块样式 */
  blockquote {
    padding: 0.25rem 0.25rem 0.25rem 0.75rem;

    @apply border-primary bg-primary/10 my-2 rounded-sm border-l-4;
  }

  /* GitHub Alert 样式 */
  .admonition {
    padding: 0.25rem 0.25rem 0.25rem 0.75rem;

    @apply my-4 rounded-sm border-l-4;

    .admonition-title {
      @apply inline-flex items-center gap-1 text-lg font-bold;
    }

    &.admonition-note {
      @apply border-info bg-info/10;

      --color-primary: var(--color-info);

      .admonition-title {
        @apply text-info;
      }
    }

    &.admonition-tip {
      @apply border-success bg-success/10;

      --color-primary: var(--color-success);

      .admonition-title {
        @apply text-success;
      }
    }

    &.admonition-important {
      @apply border-accent bg-accent/10;

      --color-primary: var(--color-accent);

      .admonition-title {
        @apply text-accent;
      }
    }

    &.admonition-warning {
      @apply border-warning bg-warning/10;

      --color-primary: var(--color-warning);

      .admonition-title {
        @apply text-warning;
      }
    }

    &.admonition-caution {
      @apply border-error bg-error/10;

      --color-primary: var(--color-error);

      .admonition-title {
        @apply text-error;
      }
    }
  }

  /* 表格样式 */
  table {
    @apply relative w-full text-left text-sm;

    :where(thead tr, tbody tr:not(:last-child), tbody tr:first-child:last-child) {
      @apply border-b-base-200 border-b-2;
    }

    :where(tfoot) {
      @apply border-t-base-200 border-t-2;
    }

    :where(thead, tfoot) {
      @apply bg-base-300/15 text-base-content/90 text-xs font-bold whitespace-nowrap;
    }

    :where(th, td) {
      padding: 0.75rem 1rem;
      vertical-align: middle;
    }
  }

  /* 数学样式 */
  mjx-container[display='true'] {
    overflow: auto;
  }
}

